Controller部分订货信息展示界面编码完成

--- a/app/src/main/res/layout/activity_order_good_message.xml
+++ b/app/src/main/res/layout/activity_order_good_message.xml
@@ -251,7 +251,7 @@
             android:layout_below="@id/textView_is_pay"
             android:padding="5dp"
             style="@style/OrderGoodMessageTextStyle"
-            android:text="是否付款:"/>
+            android:text="是否发货:"/>
         <TextView
             android:id="@+id/is_send"
             android:layout_width="wrap_content"
