Controller部分的短信展示部分编码完成（针对单个帮工）

--- a/app/src/main/res/layout/item_sms.xml
+++ b/app/src/main/res/layout/item_sms.xml
@@ -50,7 +50,7 @@
         android:layout_alignParentRight="true"
         android:padding="10dp"
         android:text="2016-01-13"
-
+        android:gravity="center_vertical"
         android:textColor="@android:color/black"
 
         android:textSize="12sp" />
