订货和发货两个部分的编码和测试全部完成

--- a/app/src/main/res/layout/fragment_helper.xml
+++ b/app/src/main/res/layout/fragment_helper.xml
@@ -15,7 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="5dp"
         android:text="添加成员"
+        android:textColor="#fff"
+        android:background="@color/s_black"
         android:layout_alignParentBottom="true" />
 </RelativeLayout>
