月份展示SaleMessageAty编码测试完成

--- a/app/src/main/res/layout/activity_sale_message.xml
+++ b/app/src/main/res/layout/activity_sale_message.xml
@@ -10,37 +10,24 @@
     <GridView
         android:id="@+id/gv_aty_sale_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="25dp"
-        android:background="#999"
+        android:layout_height="0dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_weight="1"
         android:horizontalSpacing="2dp"
         android:numColumns="2"
         android:stretchMode="columnWidth"
         android:verticalSpacing="2dp"></GridView>
 
 
-    <LinearLayout
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/month_pie"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:transitionName="line">
 
-        <TextView
-            android:id="@+id/tv_aty_sale_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="2016年1月销售额"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
-        <lecho.lib.hellocharts.view.LineChartView
-            android:id="@+id/lvc_aty_sale_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="25dp"
-            android:transitionName="line" />
-
-    </LinearLayout>
+    </com.github.mikephil.charting.charts.PieChart>
 
 </LinearLayout>
