--- a/app/src/main/res/layout/activity_helper_message.xml
+++ b/app/src/main/res/layout/activity_helper_message.xml
@@ -10,66 +10,25 @@
     <GridView
         android:id="@+id/gv_aty_helper_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="25dp"
-        android:background="#999"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:horizontalSpacing="2dp"
         android:numColumns="2"
         android:stretchMode="columnWidth"
         android:verticalSpacing="2dp"></GridView>
 
 
-    <LinearLayout
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/helper_month"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:transitionName="line">
 
-        <TextView
-            android:id="@+id/tv_aty_helper_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="2016年1月工作数据"
-            android:textColor="#000"
-            android:textSize="20sp" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <lecho.lib.hellocharts.view.LineChartView
-                    android:id="@+id/lvc_aty_helper_send"
-                    android:layout_width="match_parent"
-                    android:layout_height="260dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="25dp"
-                    android:transitionName="line" />
-
-                <lecho.lib.hellocharts.view.LineChartView
-                    android:id="@+id/lvc_aty_helper_sale"
-                    android:layout_width="match_parent"
-                    android:layout_height="260dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="25dp"
-                    android:transitionName="line" />
-
-                <lecho.lib.hellocharts.view.LineChartView
-                    android:id="@+id/lvc_aty_helper_profit"
-                    android:layout_width="match_parent"
-                    android:layout_height="260dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="25dp"
-                    android:transitionName="line" />
-
-            </LinearLayout>
-        </ScrollView>
-
-
-    </LinearLayout>
+    </com.github.mikephil.charting.charts.PieChart>
 
 </LinearLayout>
