订货和发货布局优化，帮工号码判断是否合法，界面跳转优化

--- a/app/src/main/res/layout/alertdialog_add_helper.xml
+++ b/app/src/main/res/layout/alertdialog_add_helper.xml
@@ -42,7 +42,8 @@
             android:id="@+id/alertDialog_edit_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="请输入你的手机" />
+            android:hint="请输入你的手机"
+            android:inputType="number"/>
     </LinearLayout>
 
     <LinearLayout
