--- a/app/src/main/res/layout/item_sms.xml
+++ b/app/src/main/res/layout/item_sms.xml
@@ -8,9 +8,10 @@
 
     <ImageView
         android:id="@+id/item_sms_image"
-        android:layout_width="48dp"
-        android:layout_height="match_parent"
+        android:layout_width="36dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -24,7 +25,7 @@
 
         android:textColor="@color/black"
 
-        android:textSize="14sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/item_sms_content"
@@ -40,7 +41,7 @@
         android:text="这是一个软件的测试版本，我们使用这个进行相应的测试工作，然后我们可以收..."
 
         android:textColor="#999"
-        android:textSize="14sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/item_sms_time"
@@ -48,11 +49,14 @@
         android:layout_height="wrap_content"
 
         android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/item_sms_phone"
+        android:layout_alignBottom="@id/item_sms_phone"
         android:padding="10dp"
         android:text="2016-01-13"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
 
-        android:textSize="12sp" />
+
+        android:textSize="10sp" />
 
 </RelativeLayout>
